# pocketvec

./: README.md  gitignore.txt  pyproject.toml  requirements.txt
pocketvec/examples/: demo_basic.py  demo_with_file.py
