[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pocketvec"
version = "0.1.0"
description = "A lightweight vector store built on SentenceTransformers"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Parupudi Raghava Krishna Pramod", email = "prkpramod98@gmail.com" }
]
dependencies = [
    "numpy>=1.24",
    "sentence-transformers>=2.2",
    "huggingface-hub>=1.25"
]

[project.urls]
Homepage = "https://github.com/yourusername/pocketvec"
Repository = "https://github.com/yourusername/pocketvec"
Issues = "https://github.com/yourusername/pocketvec/issues"